# AURA

./: README.md
ml/: .gitignore  pyproject.toml
ml/app/: demo.py
ml/configs/: train_qwen_eyelid.yaml  train_qwen_facelift.yaml  train_qwen_rhino.yaml  train_qwen_toy.yaml
ml/scripts/: download_models.sh  verify_env.py
ml/src/aura_ml/: __init__.py
ml/src/aura_ml/data/: SCHEMA.md  __init__.py  pair_loader.py  synthetic_pairs.py
ml/src/aura_ml/eval/: __init__.py  grid.py  metrics.py
ml/src/aura_ml/inference/: __init__.py  pipeline.py  qwen_edit.py
ml/src/aura_ml/prompt_expander/: __init__.py  qwen35.py
ml/src/aura_ml/training/: __init__.py  train.py
